--- a/pkg/ansible/playbook/trackSubnet.yml
+++ b/pkg/ansible/playbook/trackSubnet.yml
@@ -3,7 +3,7 @@
   tasks:
     - name: import subnet
       shell: /home/ubuntu/bin/avalanche subnet import file {{ subnetExportFileName }}
-    - name: avalanche join subnet
-      shell: /home/ubuntu/bin/avalanche subnet join {{ subnetName }} --fuji --avalanchego-config /home/ubuntu/.avalanchego/configs/node.json --plugin-dir /home/ubuntu/.avalanchego/plugins --force-write
-    - name: restart node - restart avalanchego
-      shell: sudo systemctl restart avalanchego
+#    - name: avalanche join subnet
+#      shell: /home/ubuntu/bin/avalanche subnet join {{ subnetName }} --fuji --avalanchego-config /home/ubuntu/.avalanchego/configs/node.json --plugin-dir /home/ubuntu/.avalanchego/plugins --force-write
+#    - name: restart node - restart avalanchego
+#      shell: sudo systemctl restart avalanchego
