add devnet to subnet join + node sync

--- a/pkg/ansible/playbook/trackSubnet.yml
+++ b/pkg/ansible/playbook/trackSubnet.yml
@@ -5,6 +5,6 @@
     - name: import subnet
       shell: bash -i -c "/home/ubuntu/bin/avalanche subnet import file {{ subnetExportFileName }} --force"
     - name: avalanche join subnet
-      shell: /home/ubuntu/bin/avalanche subnet join {{ subnetName }} --fuji --avalanchego-config /home/ubuntu/.avalanchego/configs/node.json --plugin-dir /home/ubuntu/.avalanchego/plugins --force-write
+      shell: /home/ubuntu/bin/avalanche subnet join {{ subnetName }} {{ networkFlag }} --avalanchego-config /home/ubuntu/.avalanchego/configs/node.json --plugin-dir /home/ubuntu/.avalanchego/plugins --force-write
     - name: restart node - restart avalanchego
       shell: sudo systemctl restart avalanchego
