--- a/pkg/ansible/playbook/setupNode.yml
+++ b/pkg/ansible/playbook/setupNode.yml
@@ -8,6 +8,9 @@
       shell: chmod 755 avalanchego-installer.sh
     - name: call avalanche go install script
       shell: ./avalanchego-installer.sh --ip static --rpc private --state-sync on --fuji --version {{ avalancheGoVersion }}
+    - name: stop node if devnet
+      shell: sudo systemctl stop avalanchego
+      when: {{ setDevnet }} | bool
     - name: get avalanche cli install script
       shell: wget -nd -m https://raw.githubusercontent.com/ava-labs/avalanche-cli/main/scripts/install.sh
     - name: modify permissions
